--- a/index.html
+++ b/index.html
@@ -93,6 +93,40 @@
 
     <!-- end Hero section -->
 
+    <!-- Benefits 1-->
+    <div class="hero min-h-screen bg-base-200">
+      <div class="hero-content flex-col lg:flex-row">
+        <img
+          src="https://api.lorem.space/image/movie?w=400&h=400"
+          class="max-w-sm rounded-lg shadow-2xl"
+        />
+        <div>
+          <h1 class="text-5xl font-bold">Камера</h1>
+          <p class="py-6">
+            5-ти мегапіксельна камера із регістром зйомки та автофокусом
+          </p>
+          <button class="btn btn-primary">Get Started</button>
+        </div>
+      </div>
+    </div>
+    <!-- end Benefits 1-->
+
+    <!-- Benefits 2-->
+    <div class="hero min-h-screen bg-base-200">
+      <div class="hero-content flex-col lg:flex-row-reverse">
+        <img
+          src="https://api.lorem.space/image/movie?w=400&h=400"
+          class="max-w-sm rounded-lg shadow-2xl"
+        />
+        <div>
+          <h1 class="text-5xl font-bold">Відео</h1>
+          <p class="py-6">Пряма трансляція відео в хмару.</p>
+          <button class="btn btn-primary">Get Started</button>
+        </div>
+      </div>
+    </div>
+    <!-- end Benefits 2-->
+
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
