--- a/index.html
+++ b/index.html
@@ -114,10 +114,12 @@
     <!-- Benefits 2-->
     <div class="hero min-h-screen bg-base-200">
       <div class="hero-content flex-col lg:flex-row-reverse">
-        <img
-          src="https://api.lorem.space/image/movie?w=400&h=400"
-          class="max-w-sm rounded-lg shadow-2xl"
-        />
+        <iframe
+          width="420"
+          height="315"
+          src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1"
+        >
+        </iframe>
         <div>
           <h1 class="text-5xl font-bold">Відео</h1>
           <p class="py-6">Пряма трансляція відео в хмару.</p>
