--- a/index.html
+++ b/index.html
@@ -115,11 +115,14 @@
     <div class="hero min-h-screen bg-base-200">
       <div class="hero-content flex-col lg:flex-row-reverse">
         <iframe
-          width="420"
+          width="560"
           height="315"
-          src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1"
-        >
-        </iframe>
+          src="https://www.youtube.com/embed/KILq1SNNA9c"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
         <div>
           <h1 class="text-5xl font-bold">Відео</h1>
           <p class="py-6">Пряма трансляція відео в хмару.</p>
