--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li><a>Контакти</a></li>
           <li tabindex="0">
             <a>
-              Деталі
+              Клієнтам
               <svg
                 class="fill-current"
                 xmlns="http://www.w3.org/2000/svg"
@@ -35,8 +35,8 @@
               </svg>
             </a>
             <ul class="p-2 bg-base-100">
-              <li><a>Submenu 1</a></li>
-              <li><a>Submenu 2</a></li>
+              <li><a>Логін</a></li>
+              <li><a>Реєстрація</a></li>
             </ul>
           </li>
         </ul>
@@ -46,47 +46,20 @@
     <!-- end navbar -->
 
     <!-- Hero section -->
-    <div class="hero min-h-screen bg-base-200">
-      <div class="hero-content flex-col lg:flex-row-reverse">
-        <div class="text-center lg:text-left">
-          <h1 class="text-5xl font-bold">Login now!</h1>
-          <p class="py-6">
+    <div
+      class="hero min-h-screen"
+      style="background-image: url(/public/img/earth1920.webp)"
+    >
+      <div class="hero-overlay bg-opacity-60"></div>
+      <div class="hero-content text-center text-neutral-content">
+        <div class="max-w-md">
+          <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+          <p class="mb-5">
             Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
             excepturi exercitationem quasi. In deleniti eaque aut repudiandae et
             a id nisi.
           </p>
-        </div>
-        <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
-          <div class="card-body">
-            <div class="form-control">
-              <label class="label">
-                <span class="label-text">Email</span>
-              </label>
-              <input
-                type="text"
-                placeholder="email"
-                class="input input-bordered"
-              />
-            </div>
-            <div class="form-control">
-              <label class="label">
-                <span class="label-text">Password</span>
-              </label>
-              <input
-                type="text"
-                placeholder="password"
-                class="input input-bordered"
-              />
-              <label class="label">
-                <a href="#" class="label-text-alt link link-hover"
-                  >Forgot password?</a
-                >
-              </label>
-            </div>
-            <div class="form-control mt-6">
-              <button class="btn btn-primary">Login</button>
-            </div>
-          </div>
+          <button class="btn btn-primary">Get Started</button>
         </div>
       </div>
     </div>
@@ -131,6 +104,138 @@
       </div>
     </div>
     <!-- end Benefits 2-->
+
+    <!-- Pricing -->
+    <section class="text-gray-600 body-font">
+      <div class="container px-5 py-24 mx-auto">
+        <div class="flex flex-col text-center w-full mb-20">
+          <h1
+            class="sm:text-4xl text-3xl font-medium title-font mb-2 text-gray-900"
+          >
+            Ціноутворення
+          </h1>
+          <p class="lg:w-2/3 mx-auto leading-relaxed text-base">
+            Найкраще співвідношення ціна якість.
+          </p>
+          <p class="lg:w-2/3 mx-auto leading-relaxed text-base">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui, ut
+            consequuntur. Explicabo ducimus tempora quae libero aliquam ab
+            quisquam nostrum.
+          </p>
+        </div>
+        <div class="lg:w-2/3 w-full mx-auto overflow-auto">
+          <table class="table-auto w-full text-left whitespace-no-wrap">
+            <thead>
+              <tr>
+                <th
+                  class="px-4 py-3 title-font tracking-wider font-medium text-gray-900 text-sm bg-gray-100 rounded-tl rounded-bl"
+                >
+                  Plan
+                </th>
+                <th
+                  class="px-4 py-3 title-font tracking-wider font-medium text-gray-900 text-sm bg-gray-100"
+                >
+                  Speed
+                </th>
+                <th
+                  class="px-4 py-3 title-font tracking-wider font-medium text-gray-900 text-sm bg-gray-100"
+                >
+                  Storage
+                </th>
+                <th
+                  class="px-4 py-3 title-font tracking-wider font-medium text-gray-900 text-sm bg-gray-100"
+                >
+                  Price
+                </th>
+                <th
+                  class="w-10 title-font tracking-wider font-medium text-gray-900 text-sm bg-gray-100 rounded-tr rounded-br"
+                ></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="px-4 py-3">Start</td>
+                <td class="px-4 py-3">5 Mb/s</td>
+                <td class="px-4 py-3">15 GB</td>
+                <td class="px-4 py-3 text-lg text-gray-900">Free</td>
+                <td class="w-10 text-center">
+                  <input name="plan" type="radio" />
+                </td>
+              </tr>
+              <tr>
+                <td class="border-t-2 border-gray-200 px-4 py-3">Pro</td>
+                <td class="border-t-2 border-gray-200 px-4 py-3">25 Mb/s</td>
+                <td class="border-t-2 border-gray-200 px-4 py-3">25 GB</td>
+                <td
+                  class="border-t-2 border-gray-200 px-4 py-3 text-lg text-gray-900"
+                >
+                  $24
+                </td>
+                <td class="border-t-2 border-gray-200 w-10 text-center">
+                  <input name="plan" type="radio" />
+                </td>
+              </tr>
+              <tr>
+                <td class="border-t-2 border-gray-200 px-4 py-3">Business</td>
+                <td class="border-t-2 border-gray-200 px-4 py-3">36 Mb/s</td>
+                <td class="border-t-2 border-gray-200 px-4 py-3">40 GB</td>
+                <td
+                  class="border-t-2 border-gray-200 px-4 py-3 text-lg text-gray-900"
+                >
+                  $50
+                </td>
+                <td class="border-t-2 border-gray-200 w-10 text-center">
+                  <input name="plan" type="radio" />
+                </td>
+              </tr>
+              <tr>
+                <td class="border-t-2 border-b-2 border-gray-200 px-4 py-3">
+                  Exclusive
+                </td>
+                <td class="border-t-2 border-b-2 border-gray-200 px-4 py-3">
+                  48 Mb/s
+                </td>
+                <td class="border-t-2 border-b-2 border-gray-200 px-4 py-3">
+                  120 GB
+                </td>
+                <td
+                  class="border-t-2 border-b-2 border-gray-200 px-4 py-3 text-lg text-gray-900"
+                >
+                  $72
+                </td>
+                <td
+                  class="border-t-2 border-b-2 border-gray-200 w-10 text-center"
+                >
+                  <input name="plan" type="radio" />
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="flex pl-4 mt-4 lg:w-2/3 w-full mx-auto">
+          <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0"
+            >Learn More
+            <svg
+              fill="none"
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              class="w-4 h-4 ml-2"
+              viewBox="0 0 24 24"
+            >
+              <path d="M5 12h14M12 5l7 7-7 7"></path>
+            </svg>
+          </a>
+          <button
+            class="flex ml-auto text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded"
+          >
+            Button
+          </button>
+        </div>
+      </div>
+    </section>
+    <!-- end Pricing -->
 
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
