--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Hero section -->
     <div
       class="hero min-h-screen"
-      style="background-image: url(/public/img/earth1920.webp)"
+      style="background-image: url(/public/img/hero-1.jpg)"
     >
       <div class="hero-overlay bg-opacity-60"></div>
       <div class="hero-content text-center text-neutral-content">
@@ -70,7 +70,7 @@
     <div class="hero min-h-screen bg-base-200">
       <div class="hero-content flex-col lg:flex-row">
         <img
-          src="https://api.lorem.space/image/movie?w=400&h=400"
+          src="/public/img/camera-1.png"
           class="max-w-sm rounded-lg shadow-2xl"
         />
         <div>
