--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           src="/public/img/camera-1.png"
           class="max-w-sm rounded-lg shadow-2xl"
         />
-        <div>
+        <div class="m-6">
           <h1 class="text-5xl font-bold">Камера</h1>
           <p class="py-6">
             5-ти мегапіксельна камера із регістром зйомки та автофокусом
@@ -138,6 +138,7 @@
     <div class="hero min-h-screen bg-base-200">
       <div class="hero-content flex-col lg:flex-row-reverse">
         <iframe
+          class="rounded-lg shadow-2xl"
           width="560"
           height="315"
           src="https://www.youtube.com/embed/KILq1SNNA9c"
@@ -146,7 +147,7 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
         ></iframe>
-        <div>
+        <div class="m-6">
           <h1 class="text-5xl font-bold">Відео</h1>
           <p class="py-6">Пряма трансляція відео в хмару.</p>
           <button class="btn btn-primary">Get Started</button>
@@ -162,7 +163,7 @@
           <h1
             class="sm:text-4xl text-3xl font-medium title-font mb-2 text-gray-900"
           >
-            Ціноутворення
+            Обладнання
           </h1>
           <p class="lg:w-2/3 mx-auto leading-relaxed text-base">
             Найкраще співвідношення ціна якість.
