add cabinet section

--- a/index.html
+++ b/index.html
@@ -288,6 +288,25 @@
     </section>
     <!-- end Pricing -->
 
+    <!-- Cabinet -->
+    <section>
+      <div class="hero min-h-screen bg-base-200 pt-10">
+        <div class="hero-content text-center flex-col lg:flex-row">
+          <div class="w-full">
+            <h1 class="text-4xl font-bold">Особистий кабінет</h1>
+            <p class="py-6">
+              Особистий кабінет із можливістю слідування в реальному часі.
+            </p>
+            <img
+              src="/public/img/adminpanel.webp"
+              class="rounded-lg shadow-2xl"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end Cabinet -->
+
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
