--- a/index.html
+++ b/index.html
@@ -479,14 +479,127 @@
         </div>
       </div>
 
-      <div class="container mx-auto text-center text-3xl font-bold">
+      <div class="container mx-auto text-center text-3xl font-bold pb-16">
         <a role="button" class="btn">Розрахунок персональної пропозиції</a>
       </div>
     </section>
     <!-- end steps section -->
 
     <!-- Hardware section -->
-
+    <section class="text-gray-600 body-font bg-base-200">
+      <div class="container px-5 py-24 mx-auto">
+        <div class="flex flex-col">
+          <div class="flex flex-wrap sm:flex-row flex-col py-6 mb-12">
+            <h1
+              class="sm:w-2/5 text-gray-900 font-medium title-font text-5xl mb-2 sm:mb-0"
+            >
+              Обладнання
+            </h1>
+            <p class="sm:w-3/5 leading-relaxed text-base sm:pl-10 pl-0">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Repudiandae inventore ratione expedita ullam officiis? Dolore
+              magnam, voluptas itaque blanditiis doloribus hic! Corrupti alias
+              excepturi animi incidunt exercitationem ad earum consectetur!
+            </p>
+          </div>
+        </div>
+        <div class="flex flex-wrap sm:-m-4 -mx-4 -mb-10 -mt-4">
+          <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
+            <div class="rounded-lg h-64 overflow-hidden">
+              <img
+                alt="content"
+                class="object-cover object-center h-full w-full"
+                src="https://dummyimage.com/600x500"
+              />
+            </div>
+            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">
+              Shooting Stars
+            </h2>
+            <p class="text-base leading-relaxed mt-2">
+              Swag shoivdigoitch literally meditation subway tile tumblr
+              cold-pressed. Gastropub street art beard dreamcatcher neutra,
+              ethical XOXO lumbersexual.
+            </p>
+            <a class="text-indigo-500 inline-flex items-center mt-3"
+              >Learn More
+              <svg
+                fill="none"
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                class="w-4 h-4 ml-2"
+                viewBox="0 0 24 24"
+              >
+                <path d="M5 12h14M12 5l7 7-7 7"></path>
+              </svg>
+            </a>
+          </div>
+          <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
+            <div class="rounded-lg h-64 overflow-hidden">
+              <img
+                alt="content"
+                class="object-cover object-center h-full w-full"
+                src="https://dummyimage.com/600x500"
+              />
+            </div>
+            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">
+              The Catalyzer
+            </h2>
+            <p class="text-base leading-relaxed mt-2">
+              Swag shoivdigoitch literally meditation subway tile tumblr
+              cold-pressed. Gastropub street art beard dreamcatcher neutra,
+              ethical XOXO lumbersexual.
+            </p>
+            <a class="text-indigo-500 inline-flex items-center mt-3"
+              >Learn More
+              <svg
+                fill="none"
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                class="w-4 h-4 ml-2"
+                viewBox="0 0 24 24"
+              >
+                <path d="M5 12h14M12 5l7 7-7 7"></path>
+              </svg>
+            </a>
+          </div>
+          <div class="p-4 md:w-1/3 sm:mb-0 mb-6">
+            <div class="rounded-lg h-64 overflow-hidden">
+              <img
+                alt="content"
+                class="object-cover object-center h-full w-full"
+                src="https://dummyimage.com/600x500"
+              />
+            </div>
+            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">
+              The 400 Blows
+            </h2>
+            <p class="text-base leading-relaxed mt-2">
+              Swag shoivdigoitch literally meditation subway tile tumblr
+              cold-pressed. Gastropub street art beard dreamcatcher neutra,
+              ethical XOXO lumbersexual.
+            </p>
+            <a class="text-indigo-500 inline-flex items-center mt-3"
+              >Learn More
+              <svg
+                fill="none"
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                class="w-4 h-4 ml-2"
+                viewBox="0 0 24 24"
+              >
+                <path d="M5 12h14M12 5l7 7-7 7"></path>
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- end Hardware section -->
 
     <div id="app"></div>
