add simple Footer

--- a/index.html
+++ b/index.html
@@ -602,6 +602,14 @@
     </section>
     <!-- end Hardware section -->
 
+    <!-- Footer -->
+    <footer class="footer footer-center p-4 bg-base-300 text-base-content">
+      <div>
+        <p>Copyright © 2022 - All right reserved by ACME Industries Ltd</p>
+      </div>
+    </footer>
+    <!-- end Footer -->
+
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
