--- a/index.html
+++ b/index.html
@@ -8,12 +8,61 @@
     <link rel="stylesheet" href="/src/input.css" />
   </head>
   <body>
-    <!-- navbar -->
+    <!-- navbar responsive -->
     <div class="navbar bg-base-100">
-      <div class="flex-1">
-        <a class="btn btn-ghost normal-case text-xl">Лого</a>
+      <div class="navbar-start">
+        <div class="dropdown">
+          <label tabindex="0" class="btn btn-ghost lg:hidden">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-5 w-5"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4 6h16M4 12h8m-8 6h16"
+              />
+            </svg>
+          </label>
+          <ul
+            tabindex="0"
+            class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52"
+          >
+            <li><a>Переваги</a></li>
+            <li><a>Обладнання</a></li>
+            <li><a>Послуги</a></li>
+            <li><a>Контакти</a></li>
+            <li tabindex="0">
+              <a class="justify-between">
+                Клієнтам
+                <svg
+                  class="fill-current"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                >
+                  <path
+                    d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
+                  />
+                </svg>
+              </a>
+              <ul class="p-2 bg-base-100">
+                <li>
+                  <label for="my-modal-3" class="modal-button">Логін</label>
+                </li>
+                <li><a>Реєстрація</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <a class="btn btn-ghost normal-case text-xl">Компанія</a>
       </div>
-      <div class="flex-none">
+      <div class="navbar-end hidden lg:flex">
         <ul class="menu menu-horizontal p-0">
           <li><a>Переваги</a></li>
           <li><a>Обладнання</a></li>
@@ -43,7 +92,11 @@
           </li>
         </ul>
       </div>
+      <div class="navbar-end lg:hidden">
+        <a class="btn">log</a>
+      </div>
     </div>
+    <!-- end navbar responsive -->
 
     <!-- modal login -->
 
