small fix color

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
           </table>
         </div>
         <div class="flex pl-4 mt-4 lg:w-2/3 w-full mx-auto">
-          <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0"
+          <a class="text-primary inline-flex items-center md:mb-2 lg:mb-0"
             >Learn More
             <svg
               fill="none"
@@ -394,7 +394,7 @@
             <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
           </div>
           <div
-            class="flex-shrink-0 w-6 h-6 rounded-full mt-10 sm:mt-0 inline-flex items-center justify-center bg-indigo-500 text-white relative z-10 title-font font-medium text-sm"
+            class="flex-shrink-0 w-6 h-6 rounded-full mt-10 sm:mt-0 inline-flex items-center justify-center bg-primary text-white relative z-10 title-font font-medium text-sm"
           >
             1
           </div>
@@ -402,7 +402,7 @@
             class="flex-grow md:pl-8 pl-6 flex sm:items-center items-start flex-col sm:flex-row"
           >
             <div
-              class="flex-shrink-0 w-24 h-24 bg-indigo-100 text-indigo-500 rounded-full inline-flex items-center justify-center"
+              class="flex-shrink-0 w-24 h-24 bg-indigo-100 text-primary rounded-full inline-flex items-center justify-center"
             >
               <svg
                 fill="none"
@@ -434,7 +434,7 @@
             <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
           </div>
           <div
-            class="flex-shrink-0 w-6 h-6 rounded-full mt-10 sm:mt-0 inline-flex items-center justify-center bg-indigo-500 text-white relative z-10 title-font font-medium text-sm"
+            class="flex-shrink-0 w-6 h-6 rounded-full mt-10 sm:mt-0 inline-flex items-center justify-center bg-primary text-white relative z-10 title-font font-medium text-sm"
           >
             2
           </div>
@@ -442,7 +442,7 @@
             class="flex-grow md:pl-8 pl-6 flex sm:items-center items-start flex-col sm:flex-row"
           >
             <div
-              class="flex-shrink-0 w-24 h-24 bg-indigo-100 text-indigo-500 rounded-full inline-flex items-center justify-center"
+              class="flex-shrink-0 w-24 h-24 bg-indigo-100 text-primary rounded-full inline-flex items-center justify-center"
             >
               <svg
                 fill="none"
@@ -474,7 +474,7 @@
             <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
           </div>
           <div
-            class="flex-shrink-0 w-6 h-6 rounded-full mt-10 sm:mt-0 inline-flex items-center justify-center bg-indigo-500 text-white relative z-10 title-font font-medium text-sm"
+            class="flex-shrink-0 w-6 h-6 rounded-full mt-10 sm:mt-0 inline-flex items-center justify-center bg-primary text-white relative z-10 title-font font-medium text-sm"
           >
             3
           </div>
@@ -482,7 +482,7 @@
             class="flex-grow md:pl-8 pl-6 flex sm:items-center items-start flex-col sm:flex-row"
           >
             <div
-              class="flex-shrink-0 w-24 h-24 bg-indigo-100 text-indigo-500 rounded-full inline-flex items-center justify-center"
+              class="flex-shrink-0 w-24 h-24 bg-indigo-100 text-primary rounded-full inline-flex items-center justify-center"
             >
               <svg
                 fill="none"
@@ -515,7 +515,7 @@
             <div class="h-full w-1 bg-gray-200 pointer-events-none"></div>
           </div>
           <div
-            class="flex-shrink-0 w-6 h-6 rounded-full mt-10 sm:mt-0 inline-flex items-center justify-center bg-indigo-500 text-white relative z-10 title-font font-medium text-sm"
+            class="flex-shrink-0 w-6 h-6 rounded-full mt-10 sm:mt-0 inline-flex items-center justify-center bg-primary text-white relative z-10 title-font font-medium text-sm"
           >
             4
           </div>
@@ -523,7 +523,7 @@
             class="flex-grow md:pl-8 pl-6 flex sm:items-center items-start flex-col sm:flex-row"
           >
             <div
-              class="flex-shrink-0 w-24 h-24 bg-indigo-100 text-indigo-500 rounded-full inline-flex items-center justify-center"
+              class="flex-shrink-0 w-24 h-24 bg-indigo-100 text-primary rounded-full inline-flex items-center justify-center"
             >
               <svg
                 fill="none"
@@ -592,7 +592,7 @@
               cold-pressed. Gastropub street art beard dreamcatcher neutra,
               ethical XOXO lumbersexual.
             </p>
-            <a class="text-indigo-500 inline-flex items-center mt-3"
+            <a class="text-primary inline-flex items-center mt-3"
               >Learn More
               <svg
                 fill="none"
@@ -623,7 +623,7 @@
               cold-pressed. Gastropub street art beard dreamcatcher neutra,
               ethical XOXO lumbersexual.
             </p>
-            <a class="text-indigo-500 inline-flex items-center mt-3"
+            <a class="text-primary inline-flex items-center mt-3"
               >Learn More
               <svg
                 fill="none"
@@ -654,7 +654,7 @@
               cold-pressed. Gastropub street art beard dreamcatcher neutra,
               ethical XOXO lumbersexual.
             </p>
-            <a class="text-indigo-500 inline-flex items-center mt-3"
+            <a class="text-primary inline-flex items-center mt-3"
               >Learn More
               <svg
                 fill="none"
@@ -677,7 +677,7 @@
     <!-- Footer -->
     <footer class="footer footer-center p-4 bg-base-300 text-base-content">
       <div>
-        <p>Copyright © 2022 - All right reserved by ACME Industries Ltd</p>
+        <p>Copyright © 2022 - Усі права захищені для Наша компанія</p>
       </div>
     </footer>
     <!-- end Footer -->
