fix modal form on XS

--- a/index.html
+++ b/index.html
@@ -120,15 +120,15 @@
     <!-- modal login -->
 
     <input type="checkbox" id="my-modal-3" class="modal-toggle" />
-    <div class="modal">
-      <div class="modal-box relative">
+    <div class="modal modal-bottom sm:modal-middle">
+      <div class="modal-box w-11/12 max-w-5xl relative">
         <label
           for="my-modal-3"
           class="btn btn-sm btn-circle absolute right-2 top-2"
           >✕</label
         >
         <!-- Login form -->
-        <div class="card w-full max-w-sm shadow-2xl bg-base-100 mx-auto">
+        <div class="card w-full max-w-xs shadow-2xl bg-base-100 mx-auto">
           <div class="card-body">
             <div class="form-control">
               <label class="label">
