--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
       <div class="hero-content flex-col lg:flex-row">
         <img
           src="/public/img/camera-1.png"
-          class="max-w-sm rounded-lg shadow-2xl"
+          class="max-w-sm rounded-lg shadow-2xl dark:shadow-none"
         />
         <div class="m-6">
           <h1 class="text-5xl font-bold">Камера</h1>
@@ -206,11 +206,11 @@
     </div>
     <!-- end Benefits 1-->
 
-    <!-- Benefits 2-->
+    <!-- Benefits 2  shadow-2xl -->
     <div class="hero md:min-h-screen bg-base-200">
       <div class="hero-content flex-col lg:flex-row-reverse">
         <iframe
-          class="rounded-lg shadow-2xl"
+          class="rounded-lg shadow-2xl dark:shadow-none"
           width="400"
           height="315"
           src="https://www.youtube.com/embed/KILq1SNNA9c"
