Jira VC-6 Prepare form of login

--- a/index.html
+++ b/index.html
@@ -120,13 +120,8 @@
     <!-- modal login -->
 
     <input type="checkbox" id="my-modal-3" class="modal-toggle" />
-    <div class="modal modal-bottom sm:modal-middle">
-      <div class="modal-box w-11/12 max-w-5xl relative">
-        <label
-          for="my-modal-3"
-          class="btn btn-sm btn-circle absolute right-2 top-2"
-          >✕</label
-        >
+    <label for="my-modal-3" class="modal modal-bottom sm:modal-middle">
+      <label for="" class="modal-box w-11/12 max-w-5xl relative">
         <!-- Login form -->
         <div class="card w-full max-w-xs shadow-2xl bg-base-100 mx-auto">
           <div class="card-body">
@@ -161,8 +156,8 @@
           </div>
         </div>
         <!-- end Login form -->
-      </div>
-    </div>
+      </label>
+    </label>
     <!-- end modal login -->
 
     <!-- end navbar section -->
